# qt5-x11embed

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: X11EmbedContainer.cpp  X11EmbedContainer.h  qx11embed_x11.cpp  qx11embed_x11.h
